--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Priyanka Sarkar</h1>
-							<p class="major">I'm a FullStack Web Developer Student, currently studying at Lambda School,part-time.</p>
+							<p>I'm a FullStack Web Developer Student, currently studying at Lambda School,part-time.</p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">View Portfolio</a></li>
+								<li>a href="#first" class="button big wide smooth-scroll-middle">View Portfolio</a></li>
 							</ul>
 						</div>
 						<div class="image">
