--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/arizona.jpg" alt="HorseShoeBend" />
+							<img src="images/arizona.JPG" alt="HorseShoeBend" />
 						</div>
 					</section>
 				<!-- Two -->
