--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<h1>Priyanka Sarkar</h1>
 							<p>I'm a FullStack Web Developer Student, currently studying at Lambda School,part-time.</p>
 							<ul class="actions stacked">
-								<li>a href="#first" class="button big wide smooth-scroll-middle">View Portfolio</a></li>
+								<li><a href="#first" class="button big wide smooth-scroll-middle">View Portfolio</a></li>
 							</ul>
 						</div>
 						<div class="image">
